--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,32 +8,36 @@ environment:
   sdk: ">=2.18.6 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  easy_geofencing: ^0.2.0
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  
-  progress_border: ^0.0.1
-  hive:
-  hive_flutter:
-  intl_phone_field: ^3.1.0
-  pinput:
-  font_awesome_flutter: ^10.3.0
-  intl:
-  permission_handler: ^10.2.0
-  provider: ^6.0.5
-  table_calendar: ^3.0.8
-  syncfusion_flutter_calendar: ^20.4.41
   flutter_local_notifications: ^13.0.0
-
+  font_awesome_flutter: ^10.3.0
+  hive: null
+  hive_flutter: null
+  http: ^0.13.5
+  intl: null
+  intl_phone_field: ^3.1.0
+  path_provider: ^2.0.11
+  permission_handler: ^10.2.0
+  pinput: null
+  progress_border: ^0.0.1
+  provider: ^6.0.5
+  rename: ^2.0.1
+  rxdart: ^0.27.7
+  table_calendar: ^3.0.8
+  timezone: ^0.9.1
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
+  build_runner: null
+  flutter_launcher_icons: "^0.11.0"
+  flutter_lints: ^2.0.0
+  flutter_native_splash: ^2.2.16
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  hive_generator:
-  build_runner:
-  flutter_native_splash: ^2.2.16
-  flutter_launcher_icons: "^0.11.0"
+  hive_generator: null
 
 flutter_icons:
   android: "launcher_icon"
@@ -61,7 +65,6 @@ flutter:
         - asset: assets/fonts/Sf_Pro_Regular.OTF
         - asset: assets/fonts/Sf_Pro_Medium.OTF
 
-
 flutter_native_splash:
   color: "#FFFFFF"
   image: assets/images/logo.png
@@ -69,4 +72,3 @@ flutter_native_splash:
   android_12:
     color: "#FFFFFF"
     image: assets/images/logo.png
-  
